data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1243.wast
;; 4. **Test: Loop with Exported Function Using Loop's Operand Stack**    Description: Design a scenario where the loop's operand stack values are used by an exported function. Ensure that the exported function receives correct values and returns appropriate results back to the loop.    Constraints:    - Validate handling and manipulation of loop operand stack across module boundaries.    - Ensure correct function signature for the exported function.    - Verify consistency in loop execution post-function call.

(assert_invalid
  (module
    (func $use_loop_stack (param i32) (result i32)
      local.get 0
    )
    (func $test_loop (result i32)
      (i32.const 10)
      loop (result i32)
        call $use_loop_stack
      end
    )
    (export "test" (func $test_loop))
  )
  "type mismatch"
)